# multirobots-coordination

./: .gitignore  README.md  requirements.txt
0_consensus_no_lex/: README.txt  consensus_controller.py  consensus_coordinator.py  consensus_plant.py  plot_consensus.py
1_consensus_with_lex_with_state_as_opt_variable/: consensus_config.py  plot_consensus.py
2_consensus_with_lex_no_state_as_opt_variable/: consensus_config.py  consensus_controller.py  consensus_coordinator.py  plot_consensus.py  plot_consensus_animation.py
3_consensus_col_avoid_hybrid/: consensus_controller.py  consensus_plant.py  experiment_runner.py  hybrid_controller.py  launch_experiment.ps1
4_formation_with_lex_with_state_as_opt_variable/: consensus_controller.py  consensus_plant.py  controller_node.py
5_formation_obj_col_avoid_hybrid/: consensus_comm.py  consensus_config.py  consensus_controller.py  explicit_hybrid_controller.py
6_formation_obj_col_avoid_hybrid/: build_unicycle_model.m  consensus_config.py  consensus_controller.py  cosim_bridge.py  cosim_config.py  cosim_logger.py  cosim_manager.py  cosim_step.m  experiment_runner.py  explicit_hybrid_controller.py  plot_consensus_animation.py  read_me.txt  unicycle_cosim.slx  unicycle_cosim.slxc
6_formation_obj_col_avoid_hybrid/cosim_logs/: plot_consensus_animation.py
6_formation_obj_col_avoid_hybrid/docs/: sw_arch.md
7_formation_obj_col_avoid_bcf/: consensus_config.py  explicit_hybrid_controller.py  plant_node.py
HW_Py_ROS2/: software_architecture_generator.py  system_architecture_generator.py
HW_Py_ROS2/docs/: robot_power_schematic.html  rpi4_ros2_guide.md  software_architect.xml  software_architecture.md
artifacts/: docs_and_instructions.docx
cosim_Py_ROS2/docs/: ROS2_IN_PY_GUIDE.md  ros2_cosim_platform1_architecture.html
cosim_Py_ROS2/formation_cosim_ros2/: STEP_BY_STEP_GUIDE.md  cosim_csv_logger.py  formation_cosim_launch.py  formation_planner_node.py  package.xml  setup.py  unicycle_fleet_node.py
cosim_Py_ROS2/minimal_cosim/: STEP_BY_STEP_GUIDE.md  cosim_mini_launch.py  motion_controller_node.py  package.xml  planner_node.py  setup.py
cosim_Py_ROS2/pi_cosim_ros2/: PLATFORM2_GUIDE.md  platform2_rpi4_fleet_launch.py  platform2_rpi4_single_launch.py  platform2_vm_launch.py  robot_sim_node.py  setup.py
cosim_Py_ROS2/py_env/: consensus_config.py  coordinator_node.py  plot_consensus.py  plot_consensus_animation.py
cosim_Py_Simulink/6_formation_obj_col_avoid_hybrid/: consensus_config.py  consensus_controller.py  consensus_metrics.csv  read_me.txt  (+8 more)
(+36 files in other folders)
